fix the sidebar alignement with flexBox

--- a/gatsby-theme-ejiwen/src/styles/style.css
+++ b/gatsby-theme-ejiwen/src/styles/style.css
@@ -1,6 +1,19 @@
 .sideBar {
     position: sticky; 
-top: 0; 
-height: 100vh;
+    top: 0; 
+    height: 100vh;
+    /* border: 2px solid red; */
+}
+
+.sideLeft {
     border: 2px solid red;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* align-content: stretch; */
+}
+
+.borderDiv {
+    border: solid 2ps yellow;
 }
